--- a/.gitmodules
+++ b/.gitmodules
@@ -5,4 +5,5 @@
 	path = third_party/libero
 	url = https://github.com/Lifelong-Robot-Learning/LIBERO.git
 [submodule "dexcanvas"]
+	path = dexcanvas
 	url = http://192.168.10.116/ai/dexcanvas.git
